# tevian

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  make_deb.sh  tevian.code-workspace
src/: cli.cpp  facedata.h  loader.cpp  loader.h  main.cpp  maintask.cpp  maintask.h  mainwindow.cpp  mainwindow.h  mydialog.cpp  mydialog.h  renderthread.cpp  renderthread.h  requester.cpp  requester.h  viewpoint.cpp  viewpoint.h
tevian_1.0-1/DEBIAN/: control
